# simple_pascal_interpreter

./: .gitignore  Cargo.toml  LICENSE  readme.md
part1/: Cargo.toml
part1/src/: cal.rs  main.rs
part10/: Cargo.toml
part10/src/: main.rs  spi10.rs  test_interpreter.rs
part11/: Cargo.toml
part11/src/: main.rs  spi11.rs  test_interpreter.rs
part12/: Cargo.toml
part12/src/: genastdot.rs  main.rs  spi12.rs  test_interpreter.rs
part13/: Cargo.toml
part14/: Cargo.toml  ast.dot
part14/src/: genastdot.rs  main.rs  spi14.rs  test_interpreter.rs
part15/: Cargo.toml
part15/src/: genastdot.rs  main.rs  spi15.rs  test_interpreter.rs
part16/: Cargo.toml
part16/src/: genastdot.rs  main.rs  spi16.rs  test_interpreter.rs
part17/: Cargo.toml
part17/src/: genastdot.rs  main.rs  spi17.rs  test_interpreter.rs
part18/: Cargo.toml
part18/src/: genastdot.rs  main.rs  spi18.rs  test_interpreter.rs
part19/: Cargo.toml  part19.pas
part19/src/: genastdot.rs  main.rs  spi19.rs  test_interpreter.rs
part2/: Cargo.toml
part2/src/: cal2.rs  main.rs
part3/src/: main.rs
part4/src/: cal4.rs  main.rs
part5/: Cargo.toml
part5/src/: cal5.rs  main.rs
part6/: Cargo.toml
part6/src/: main.rs
part7/: Cargo.toml
part7/src/: cal7.rs  main.rs
part8/: Cargo.toml
part8/src/: cal8.rs  main.rs
part9/: Cargo.toml
part9/src/: main.rs  spi9.rs
src/: error.rs  interpret.rs  lexer.rs  main.rs  object.rs  parser.rs  semantic.rs  token.rs
src/libs/: llparser.rs  mod.rs
src/libs/backup/: ch2.rs  ch3.rs  ch4.rs  ch5.rs  mod.rs
src/rust_parser/: cal.rs  cal2.rs  cal3.rs  cal4.rs  cal5.rs  cal6.rs  cal7.rs  cal8.rs  mod.rs  spi9.rs
src/rust_parser/part1/: mod.rs
src/rust_parser/part10/: mod.rs  spi10.rs  test_interpreter.rs
src/rust_parser/part11/: mod.rs  test_interpreter.rs
src/rust_parser/part12/: ast.dot  genastdot.rs  mod.rs  test_interpreter.rs
src/rust_parser/part14/: genastdot.rs  mod.rs  test_interpreter.rs
src/rust_parser/part15/: genastdot.rs  mod.rs  test_interpreter.rs
src/rust_parser/part16/: ast.dot  genastdot.rs  mod.rs  spi16.rs  test_interpreter.rs
src/rust_parser/part17/: genastdot.rs  mod.rs  spi17.rs  test_interpreter.rs
src/tests/: ast.dot  genastdot.rs  mod.rs  test.pas  test_interpret.rs
(+23 files in other folders)
