[package]
name = "learn_parse_rust"
authors = ["Mark Deng"]
readme = "readme.md"
version = "0.1.0"
edition = "2021"
description = "The Book Language Implementation Patterns rust version"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"

[profile.release]
debug = 0         # No debug info at all
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true        # Enable Link Time Optimization (LTO)
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization
panic = "abort"   # Abort on Panic

