[package]
name = "learn_parse_rust"
authors = ["Mark Deng"]
readme = "readme.md"
version = "0.1.0"
edition = "2021"
description = "The Book Language Implementation Patterns rust version"


[[bin]]
name = "parse_rust"
path = "main.rs"

[workspace]
members = [
    "part1",
    "part2",
    "part3",
    "part4",
    "part5",
    "part6",
    "part7",
    "part8",
    "part9",
    "part10",
    "part11",
    "part12",
    "part13",
    "part14",
    "part15",
    "part16",
    "part17",
    "part18",
    "part19",
]



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
debug = 0         # No debug info at all
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true        # Enable Link Time Optimization (LTO)
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization
panic = "abort"   # Abort on Panic

