[package]
name = "pascal_interpret"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# logging
log = "0.4"
env_logger = "0.11"
chrono = "0.4"

[workspace]
members = [
    "part1",
    "part2",
    "part3",
    "part4",
    "part5",
    "part6",
    "part7",
    "part8",
    "part9",
    "part10",
    "part11",
    "part12",
    "part13",
    "part14",
    "part15",
    "part16",
    "part17",
    "part18",
    "part19",
]

